03-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task_application
  namespace: task_application
spec:
  type: ClusterIP
  selector:
    app: task_application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
