03-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task_application-ingress
  namespace: task_application
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: all
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task_application
            port:
              number: 80
